<resources>
    <string name="app_name">Onlib</string>
    <string name="home">Home</string>
    <string name="my_books">My Books</string>
    <string name="req_book">Request a Book</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="app_label">OnLib</string>
    <string name="search_hint">Search Books...</string>
    <string name="speak_voice">Speak...</string>
    <string name="forgot_password">FORGOT PASSWORD</string>
    <string name="sign_up">SIGN UP</string>
    <string name="email_me">EMAIL ME</string>
    <string name="cancel">cancel</string>
    <string name="register_new_user">Register new user</string>
    <string-array name="user_type">
            <item>User</item>
            <item>Librarian</item>
            <item>Admin</item>
    </string-array>
    <string name="user_type">user_type</string>
    <string name="user_type_user">User</string>
    <string name="user_type_librarian">Librarian</string>
    <string name="user_type_admin">Admin</string>
    <string name="register_as">Register as:</string>

    <!-- bundle args -->
    <string name="bundle_user">user</string>

    <string name="dbname_users">users</string>
    <string name="dbname_librarians">librarians</string>
    <string name="dbname_books">books</string>
    <string name="dbname_refined_books">refined_books</string>

    <string name="register_account">Register Account</string>
    <string name="login_as">Login as</string>
    <string name="update_profile">Update Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="add_book">Add Book</string>

    <!-- database fields -->
    <string name="field_computer_code">computer_code</string>
    <string name="field_book_id">book_id</string>
    <string name="field_profile_pic">profile_pic</string>
    <string name="field_name">name</string>
    <string name="field_email">email</string>
    <string name="field_cover">cover</string>
    <string name="field_book_name">name</string>
    <string name="field_author">author</string>
    <string name="field_edition">edition</string>
    <string name="field_available">available</string>
    <string name="field_branch">branch</string>

    <string name="label_confirm_latefee">Confirm Payement?</string>
    <string name="label_confirm">confirm</string>
    <string name="label_cancel">cancel</string>
    <string name="intent_query">query</string>
    <string name="Catalogue">Catalogue</string>
    <string name="issue_book">Issue Book</string>
    <string name="return_book">Return Book</string>
    <string name="elasticsearch">elasticsearch</string>
    <string name="field_password">password</string>
    <string name="book_id">Book ID</string>
    <string name="enter_book_id">Enter Book ID</string>
    <string name="enter_computer_code">Enter Computer Code</string>
    <string name="computer_code">Computer Code</string>
    <string name="clear_search_suggestions">clear search suggestions</string>
    <string name="currently_issued_books">Currently Issued Books</string>
    <string name="field_messaging_token">messaging_token</string>


    <string name="default_notification_channel_id" translatable="false">com.ips.lib.onlib.default_notification_channel_id</string>
    <string name="data_type">data_type</string>
    <string name="book_event">book_event</string>
    <string name="book_return">book_return</string>
    <string name="data_content">data_content</string>
    <string name="data_title">title</string>
    <string name="data_message_id">message_id</string>
    <string name="data_date">data_date</string>
    <string name="dbname_notifications">notifications</string>
    <string name="activity_name">activity_name</string>
    <string name="MainActivity">MainActivity</string>
    <string name="issue_history">Issue History</string>
    <string name="dbname_issue_history">issue_history</string>
    <string name="field_issue_date">issue_date</string>
    <string name="book_details">Book Details</string>
    <string name="refined_book_extra">Refined Book</string>
    <string name="transition_name">transition name</string>
    <string name="dbname_wishlist">wishlist</string>
    <string name="refined_key">refined_key</string>
    <string name="dbname_admin">admin</string>
    <string name="field_is_issued">is_issued</string>
</resources>
