<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single"
        android:id="@+id/menu_top">

        <item
            android:id="@+id/home"
            android:title="@string/home"
            android:icon="@drawable/ic_home"/>
        <item
            android:id="@+id/myBooks"
            android:title="@string/my_books"
            android:icon="@drawable/ic_my_books"
            />
        <item
            android:id="@+id/issued"
            android:title="@string/issue_history"
            android:icon="@drawable/ic_history"/>
        <item
            android:id="@+id/reqAbook"
            android:title="@string/req_book"
            android:icon="@drawable/ic_req_book"/>0
    </group>
    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="single">
        <item
            android:id="@+id/settings"
            android:title="@string/settings"
            android:icon="@drawable/ic_settings"/>
        <item
            android:id="@+id/logout"
            android:title="@string/logout"
            android:icon="@drawable/ic_logout"/>

    </group>



</menu>